#560 test run in java 9 10 11