@@ -43,7 +43,6 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>2.5.4</version>
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
@@ -128,48 +127,6 @@
 			<activation>
 				<jdk>[9,11]</jdk>
 			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-
-						<executions>
-							<execution>
-								<id>default-testCompile</id>
-								<phase>test-compile</phase>
-								<configuration>
-									<fork>true</fork>
-									<compilerArgs>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.converter/org.simpleflatmapper.converter.impl.time=org.simpleflatmapper.converter.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.converter/org.simpleflatmapper.converter.impl=org.simpleflatmapper.converter.test</arg>
-									</compilerArgs>
-								</configuration>
-								<goals>
-									<goal>testCompile</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20.1</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.maven.surefire</groupId>
-								<artifactId>maven-surefire-common</artifactId>
-								<version>2.20.1-pj10</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-
-				</plugins>
-
-			</build>
 		</profile>
 
 	</profiles>
