@@ -88,7 +88,6 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>2.5.4</version>
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
@@ -139,10 +138,6 @@
 						<groupId>com.google.code.maven-replacer-plugin</groupId>
 						<artifactId>replacer</artifactId>
 					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -169,10 +164,6 @@
 					<plugin>
 						<groupId>com.google.code.maven-replacer-plugin</groupId>
 						<artifactId>replacer</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
@@ -225,51 +216,16 @@
 
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-
-						<executions>
-							<execution>
-								<id>default-testCompile</id>
-								<phase>test-compile</phase>
-								<configuration>
-									<fork>true</fork>
-									<compilerArgs>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.mapper=org.simpleflatmapper.csv.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl=org.simpleflatmapper.csv.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.cellreader=org.simpleflatmapper.csv.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.primitive=org.simpleflatmapper.csv.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.impl.writer=org.simpleflatmapper.csv.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.csv/org.simpleflatmapper.csv.parser=org.simpleflatmapper.csv.test</arg>
-									</compilerArgs>
-								</configuration>
-								<goals>
-									<goal>testCompile</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
 
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20.1</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.maven.surefire</groupId>
-								<artifactId>maven-surefire-common</artifactId>
-								<version>2.20.1-pj10</version>
-							</dependency>
-						</dependencies>
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED 
+								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test=org.simpleflatmapper.reflect 
+								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.writer.time=org.simpleflatmapper.reflect 
+								--add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.writer=org.simpleflatmapper.reflect 
+                                --add-opens org.simpleflatmapper.csv/org.simpleflatmapper.csv.test.bug=org.simpleflatmapper.reflect </argLine>
 						</configuration>
 					</plugin>
 				</plugins>
