@@ -69,7 +69,6 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>2.5.4</version>
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
@@ -247,47 +246,19 @@
 
 			<build>
 				<plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-
-                        <executions>
-                            <execution>
-                                <id>default-testCompile</id>
-                                <phase>test-compile</phase>
-                                <configuration>
-									<fork>true</fork>
-									<compilerArgs>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.reflect/org.simpleflatmapper.reflect.impl=org.simpleflatmapper.reflect.test</arg>
-									</compilerArgs>
-                                </configuration>
-                                <goals>
-                                    <goal>testCompile</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
 
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20.1</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.maven.surefire</groupId>
-								<artifactId>maven-surefire-common</artifactId>
-								<version>2.20.1-pj10</version>
-							</dependency>
-						</dependencies>
+						<version>2.22.0</version>
 
 						<configuration>
+							<excludes>
+								<exclude>org.simpleflatmapper.reflect.test.meta.ObjectClassMetaTest</exclude>
+								<exclude>org.simpleflatmapper.reflect.test.meta.AliasProviderServiceTest</exclude>
+							</excludes>
 							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
 					</plugin>
 				</plugins>
 
